--- a/home.css
+++ b/home.css
@@ -4,23 +4,28 @@ File name: home.css
 Date Created: 1/25/19
 */
 
-
 #body{
   background-color: #0a192f;
   background-repeat: no-repeat;
   color: #d3dce8;
   font-family : Courier;
+  font-size: 20px;
+  overflow-x: hidden;
+  overflow-y: scroll; 
 }
 #myheader{
     background-image: linear-gradient(170deg, lightblue 0%, #0a192f 55%);
     height: 500px;
     width: 100%;
 }
-
-.general-text{
-    font-size: 20px;
-
+.fullwidth{
+    width: 100%;
 }
+
+.year{
+    float: right;
+}
+
 .name{
     color: #fdfdfd;
     font-family: Verdana;
@@ -35,4 +40,4 @@ Date Created: 1/25/19
     border: 2px solid;
     border-color: inherit;
     border-radius: 2px;
-  }
+}
