--- a/my-app/src/Header.css
+++ b/my-app/src/Header.css
@@ -3,8 +3,10 @@
     height: 500px;
     width: 100%;
     color: #d3dce8;
-    font-family : Courier;
-    font-size: 20px;
+    font-family : 'Courier';
+    font-size: 28px;
+    text-align: center;
+    padding : 2%;
   }
 .name{
     color: #fdfdfd;
