--- a/my-app/src/Header.css
+++ b/my-app/src/Header.css
@@ -6,10 +6,10 @@
     font-family : 'Courier';
     font-size: 28px;
     text-align: center;
-    padding : 2%;
   }
 .name{
     color: #fdfdfd;
     font-family: Verdana;
     font-size: 60px;
+    margin: 0px;
 }
