--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,5 +3,9 @@ body {
   background-color: #0a192f;
   background-repeat: no-repeat;
   text-align: center;
+  font-family : Courier;
+  font-size: 20px;
+  overflow-x: hidden;
+  overflow-y: scroll; 
 }
 
